# ems

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  seed_demo.py
alembic/: env.py
alembic/versions/: 0001_clean_architecture_baseline.py
frontend/: index.html
frontend/static/: app.js  style.css
src/app/: __init__.py
src/app/application/: __init__.py  commands.py  ports.py  queries.py  services.py
src/app/domain/: __init__.py  entities.py  enums.py  errors.py  value_objects.py
src/app/infrastructure/: config.py  database.py  models.py  repositories.py  seed.py  uow.py
src/app/presentation/: api.py  dependencies.py  schemas.py
src/app/presentation/routers/: categories.py  equipments.py
tests/: conftest.py
tests/application/: test_category_service.py  test_equipment_service.py
tests/domain/: test_category.py  test_entities.py  test_value_objects.py
tests/presentation/: test_api.py
